feat: swagger doc updated for category
